--- a/client/src/styles/loginmodal.css
+++ b/client/src/styles/loginmodal.css
@@ -1,5 +1,20 @@
+.loginmodal {
+  border-radius: 10px;
+  /* background-color: green; */
+}
+
 .loginmodal_login {
   color: white;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 325;
+
+
+}
+
+.loginmodal_wrapper {
+
+  /* background-color: red; */
+  justify-items: center;
+  align-items: center;
+  border-radius: 10px;
 }
