--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -7,9 +7,19 @@
 } */
 
 .dashboard_sidebar {
-  background: #fff;
+  -webkit-box-shadow:0px 0px 15px 5px #b6a1a1 ;
+  -moz-box-shadow:0px 0px 15px 5px #b6a1a1 ;
+  box-shadow:0px 0px 15px 5px #b6a1a1 ;
 }
 
 .dashboard_container {
   height: 500px;
+}
+
+.dashboard_breadcrumb {
+  color: white;
+}
+
+.dashboard_container {
+  height: 100%;
 }
