--- a/client/src/styles/card.css
+++ b/client/src/styles/card.css
@@ -2,3 +2,28 @@
   display: flex;
   /* flex-direction: column */
 }
+
+.card_answer {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 325;
+  font-size: 40px;
+  color: white;
+  margin: 50px 0;
+}
+
+.card_answer_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+}
+
+.card_audio_player {
+  color: white;
+  margin-bottom: 75px;
+}
+
+.card_url {
+  margin-bottom: 50px;
+}
