updated landing page footer

--- a/client/src/styles/landingbody.css
+++ b/client/src/styles/landingbody.css
@@ -1,6 +1,7 @@
+
 .landingbody_container {
   background-color: black;
-  height: 600px;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
