--- a/client/src/styles/landingheader.css
+++ b/client/src/styles/landingheader.css
@@ -15,3 +15,9 @@
 .landing_logo {
   height: 110px;
 }
+
+.disable {
+  color: white;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 325;
+}
